tests/conformance/negative/bad_arity.afr
function f() returns number
    return 1
end
create x = f(1, 2)
